[package]
name = "tuihost"
version = "0.1.0"
edition = "2024"
readme = "./README.md"
repository = "https://github.com/pawurb/tuihost"
description = "Host TUIs over SSH. No users. No passwords."
license = "MIT"
categories = ["development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
russh = "0.57"
pty-process = { version = "0.5", features = ["async"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_core = "0.6"
ssh-key = "0.6"
